Added v1 data zipped and scrapper almost finished

--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,17 @@
 [[source]]
-name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-
-[dev-packages]
+name = "pypi"
 
 [packages]
 nltk = "*"
+tweepy = "*"
+jupyterlab = "*"
+pandas = "*"
+numpy = "*"
+matplotlib = "*"
+
+[dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
